[Enhancement #465] Support nested INNER joins in Criteria API.
Refactor common functionality of Root and Join into AbstractFrom.